--- a/frontend.html
+++ b/frontend.html
@@ -41,7 +41,7 @@
 <h5><a href='https://rheingaufoundersportfolio.recruitee.com/o/senior-frontend-developer-fmd-realxdata-gmbh-1'>
       Senior Frontend Developer (f/m/d) @realxdata GmbH - Rheingau Founders Portfolio
     </a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Berlin, Germany</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
 <h5><a href='https://jobs.lever.co/vpTech/45d04549-e492-481f-a293-977691eb00e6'>vpTech - Front-end Developer</a></h5> 
@@ -76,7 +76,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Verisk/743999698669729-front-end-web-developer'>Verisk Front End Web Developer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Verisk/743999698669729-front-end-web-developer'>Verisk Front End Web Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Lehi, UT, USA</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -132,7 +132,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/gitlab/jobs/4502531002'>Job Application for Frontend Engineer, Defend at GitLab</a></h5> 
+<h5><a href='https://boards.greenhouse.io/gitlab/jobs/4502531002'>Job Application for Frontend Engineer, Defend at GitLab</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -144,7 +144,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/gitlab/jobs/4502536002'>Job Application for Frontend Engineer, Secure at GitLab</a></h5> 
+<h5><a href='https://boards.greenhouse.io/gitlab/jobs/4502536002'>Job Application for Frontend Engineer, Secure at GitLab</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -286,15 +286,15 @@
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://masglobalconsulting.applytojob.com/apply/BAY4lOgMbL/Senior-Front-End-DeveloperAngularReactHTML5CSS3'>Senior Front End Developer(Angular/React/HTML5/CSS3) - MAS Global Consulting - Career Page</a></h5> 
+<h5><a href='http://masglobalconsulting.applytojob.com/apply/BAY4lOgMbL/Senior-Front-End-DeveloperAngularReactHTML5CSS3'>Senior Front End Developer(Angular/React/HTML5/CSS3) - MAS Global Consulting - Career Page</a></h5> 
 <p><span class="badge badge-light">Tampa, FL Medellin, Colombia</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://masglobalconsulting.applytojob.com/apply/Qa9fJ5Giux/MidSenior-Front-End-DeveloperAngularReactHTML5CSS3'>Mid-Senior Front End Developer(Angular/React/HTML5/CSS3) - MAS Global Consulting - Career Page</a></h5> 
+<h5><a href='http://masglobalconsulting.applytojob.com/apply/Qa9fJ5Giux/MidSenior-Front-End-DeveloperAngularReactHTML5CSS3'>Mid-Senior Front End Developer(Angular/React/HTML5/CSS3) - MAS Global Consulting - Career Page</a></h5> 
 <p><span class="badge badge-light">Tampa, FL Medellin, Colombia</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://skatedeluxe.join.com/jobs/453409-frontend-entwickler-w-m-d'>Job @ skatedeluxe Skateshop (Leipzig): Frontend En... | JOIN</a></h5> 
+<h5><a href='https://skatedeluxe.join.com/jobs/453409-frontend-entwickler-w-m-d'>Job @ skatedeluxe Skateshop (Leipzig): Frontend En... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -312,7 +312,7 @@
 <p><span class="badge badge-light">Newark, NJ</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ngtechinc.zohorecruit.com/recruit/ViewJob.na?digest=tIjHuWh8jyuU41WZZ2OUxIUKlDv4AYZbzDzGhBKWbq0-&embedsource=CareerSite'>Sr Frontend Developer (React JS or Angular JS)</a></h5> 
+<h5><a href='https://ngtechinc.zohorecruit.com/recruit/ViewJob.na?digest=tIjHuWh8jyuU41WZZ2OUxIUKlDv4AYZbzDzGhBKWbq0-&embedsource=CareerSite'>Sr Frontend Developer (React JS or Angular JS)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -416,7 +416,7 @@
 <p><span class="badge badge-light">Philippines</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qSnaVfw4&k=Job&j=oVXebfw1&__jvst=Employee&__jvsd=sulY9hwI&__jvsc=Twitter&bid=nyLipMwh'>DNEG Careers - Front End Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qSnaVfw4&k=Job&j=oVXebfw1&__jvst=Employee&__jvsd=sulY9hwI&__jvsc=Twitter&bid=nyLipMwh'>DNEG Careers - Front End Developer</a></h5> 
 <p><span class="badge badge-light">Mumbai Chennai, India</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -448,11 +448,11 @@
 <p><span class="badge badge-light">Krakow, Poland  Krakow, Poland  Krakow, Poland</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='https://hire.withgoogle.com/public/jobs/faunacom/view/P_AAAAAAJAABiBUOvIo1SfXN'>NodeJS /Front End Developer - Remote, San Francisco or Boston job in Remote at Fauna, Inc.</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://hire.withgoogle.com/public/jobs/faunacom/view/P_AAAAAAJAABiBUOvIo1SfXN'>NodeJS /Front End Developer - Remote, San Francisco or Boston job in Remote at Fauna, Inc.</a></h5> 
 <p><span class="badge badge-light">San Francisco Boston San Francisco Boston</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/>
+
 
 <!--End body here -->
 
